deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
      - name: next-app
        image: us-central1-docker.pkg.dev/sit737-24t1-raja-e6134ca/tourism-repo/tourism-app-next-app:1.1.1
        ports:
        - containerPort: 3000
