nextjs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
spec:
  selector:
    matchLabels:
      app: nextjs
  replicas: 1
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: localhost:5005/tourism-recommendations
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: env-file
              mountPath: /env
              subPath: .env
      volumes:
        - name: env-file
          configMap:
            name: env-config
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs
spec:
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 30080
  type: NodePort
  # type: LoadBalancer
