service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-app
spec:
  selector:
    app: next-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
  type: LoadBalancer
