networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-traffic
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: next-app
        - podSelector:
            matchLabels:
              app: mongo
  policyTypes:
    - Ingress
    - Egress
